--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": false,
+        "strictNullChecks": false
     },
     "include": [
         "./src/**/*"
